# hid_listener

./: .gitignore  .metadata  CHANGELOG.md  LICENSE  README.md  ffigen.yaml  ffigen_linux.yaml  ffigen_macos.yaml  ffigen_shared.yaml  ffigen_swift.yaml  ffigen_windows.yaml  pubspec.yaml
example/: README.md  pubspec.yaml
example/lib/: main.dart
example/linux/: CMakeLists.txt  main.cc  my_application.cc
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
lib/: hid_listener.dart
lib/src/: hid_listener.dart  hid_listener_bindings.dart  hid_listener_bindings_swift.dart  hid_listener_bindings_universal.dart  hid_listener_bindings_wrapper.dart  hid_listener_types.dart
lib/src/linux/: hid_listener_bindings_linux.dart  hid_listener_linux.dart
lib/src/macos/: hid_listener_bindings_macos.dart  hid_listener_macos.dart
lib/src/shared/: hid_listener_bindings_shared.dart  hid_listener_shared.dart
lib/src/windows/: hid_listener_bindings_windows.dart  hid_listener_windows.dart
linux/: CMakeLists.txt  hid_listener_linux.h  hid_listener_plugin.cpp  hid_listener_plugin_linux.cpp
linux/include/hid_listener/: hid_listener_linux_conversion.h  hid_listener_plugin.h
macos/: generate_header.sh  hid_listener.podspec  hid_listener_plugin.podspec
macos/Bindings/: HidListener.h
macos/Classes/: HidListener.swift  HidListenerPlugin-bridging.m  HidListenerPlugin.swift  KeyTranslation.swift
macos/Classes/Shared/: hid_listener_macos.cpp  hid_listener_macos.h
shared/: CMakeLists.txt  hid_listener_keycodes.h  hid_listener_shared.h
shared/dart-sdk/: dartdoc_options.yaml
shared/dart-sdk/include/: dart_api_dl.c
shared/module/: module.modulemap
windows/: CMakeLists.txt  hid_listener_plugin.cpp  hid_listener_plugin.h  hid_listener_plugin_windows.cpp  hid_listener_windows.h
windows/include/hid_listener/: hid_listener_plugin_windows.h
